deploy/platform/killbill/kaui/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaui
  namespace: saasodoo
  labels:
    app.kubernetes.io/name: kaui
    app.kubernetes.io/component: admin-ui
    app.kubernetes.io/part-of: killbill
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kaui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kaui
        app.kubernetes.io/component: admin-ui
        app.kubernetes.io/part-of: killbill
    spec:
      containers:
        - name: kaui
          image: killbill/kaui:3.0.23
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: "50m"
              memory: "1280Mi"
            limits:
              cpu: "200m"
              memory: "1536Mi"
